# BME3053C-Fall-2025

./: anlaysis.ipynb
interactive-exercises/: List_Slicing.ipynb
lessons-solved/: 01_welcome_bme3053c_08_25_2025.ipynb  02A_Python_Basics_Part1_08_25_2025.ipynb  02A_Python_Basics_Part1_08_27_2025.ipynb  02A_Python_Basics_Part1_09_08_2025.ipynb  02A_Python_Basics_Part1_09_3_2025.ipynb  02A_Python_Basics_Part1_09_5_2025.ipynb  02A_Python_Basics_Part1_09_8_2025.ipynb  02B_Python_Basics_Part2_09_10_2025.ipynb  02B_Python_Basics_Part2_09_15_2025.ipynb  02B_Python_Basics_Part2_09_17_2025.ipynb  02B_Python_Basics_Part2_09_19_2025.ipynb  02B_Python_Basics_Part2_09_22_2025.ipynb  03_Matplotlib_and_Numpy_09_24_2025.ipynb  03_Matplotlib_and_Numpy_09_26_2025.ipynb  05_Advanced_DataFrame_Operations_10_06_2025.ipynb  05_Advanced_DataFrame_Operations_10_08_2025.ipynb  05_Advanced_DataFrame_Operations_10_10_2025.ipynb  06_Matrix_Transformations_10_13_2025.ipynb  06_Matrix_Transformations_10_15_2025.ipynb  06_Matrix_Transformations_10_20_2025.ipynb  06_Matrix_Transformations_10_22_2025.ipynb  08_Copilot_Introduction_11_10_2025.ipynb  08_Copilot_Introduction_11_12_2025.ipynb  midterm-study-guide_10_24_2025.ipynb
lessons-solved/04_Pandas/: 10_3_2025.ipynb
lessons-solved/patient-records-project/: README.md  pyproject.toml  requirements.txt
lessons-solved/patient-records-project/notebooks/: 08_Copilot_Introduction_11_12_2025.ipynb
lessons-solved/patient-records-project/src/: __init__.py  patient_records.py
lessons-solved/patient-records-project/tests/: test_patient_records.py
