[tool.poetry]
name = "patient-records-project"
version = "0.1.0"
description = "A project for managing patient records with data validation and statistical analysis."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"